# gitea-sdk

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  README_zh.md
.githooks/: pre-commit
.github/workflows/: ci.yml
.sisyphus/plans/: phase4-polish.md
docs/plans/: 2026-03-19-pre-release-audit-fixes.md
examples/: authentication.rs  basic_usage.rs
src/: client.rs  error.rs  lib.rs  pagination.rs  response.rs  version.rs
src/api/: actions.rs  activitypub.rs  admin.rs  hooks.rs  issues.rs  miscellaneous.rs  mod.rs  notifications.rs  oauth2.rs  orgs.rs  packages.rs  pulls.rs  releases.rs  repos.rs  settings.rs  status.rs  users.rs
src/auth/: httpsig.rs  mod.rs  pageant.rs  ssh_agent.rs  ssh_sign.rs
src/internal/: escape.rs  http.rs  mod.rs  query.rs  request.rs
src/options/: action.rs  admin.rs  hook.rs  issue.rs  miscellaneous.rs  mod.rs  notification.rs  oauth2.rs  org.rs  package.rs  pull.rs  release.rs  repo.rs  status.rs  user.rs
src/types/: action.rs  activity.rs  badge.rs  comment.rs  cron_task.rs  enums.rs  hook.rs  issue.rs  label.rs  license.rs  milestone.rs  mod.rs  node_info.rs  notification.rs  oauth2.rs  organization.rs  package.rs  pull_request.rs  reaction.rs  release.rs  repository.rs  secret.rs  serde_helpers.rs  settings.rs  status.rs  team.rs  user.rs  user_settings.rs
tests/: auth_pipeline_test.rs  integration_test.rs  live_actions_test.rs  live_activitypub_test.rs  live_admin_test.rs  live_coverage_inventory_test.rs  live_coverage_manifest_test.rs  live_deploy_keys_test.rs  live_execution_evidence_test.rs  live_hooks_test.rs  live_integration_test.rs  live_issues_advanced_test.rs  live_issues_extra_test.rs  live_issues_full_coverage_test.rs  live_issues_list_delete_test.rs  live_issues_templates_attachments_test.rs  live_issues_test.rs  live_notifications_test.rs  live_oauth2_test.rs  live_org_team_members_test.rs  live_orgs_extra_test.rs  live_orgs_test.rs  live_packages_test.rs  live_pulls_minimal_test.rs  live_pulls_reviews_dual_test.rs  live_pulls_reviews_test.rs  live_releases_test.rs  live_repo_deploy_keys_test.rs  live_repo_git_hooks_test.rs  live_repo_protections_test.rs  live_repo_tags_test.rs  live_repo_watchers_test.rs  live_repo_wiki_test.rs  live_repos_advanced_test.rs  live_repos_collaborators_write_test.rs  live_repos_content_test.rs  live_repos_core_test.rs  live_repos_fork_template_test.rs  live_repos_management_test.rs  live_repos_misc_test.rs  (+14 more)
tests/common/: mod.rs
(+132 files in other folders)
