[package]
name = "gitea-sdk"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Rust SDK for the Gitea API"
license = "MIT"
repository = "https://gitea.com/gitea/go-sdk"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
strum = { version = "0.27", features = ["derive"] }
thiserror = "2"
semver = { version = "1", features = ["serde"] }
parking_lot = "0.12"
tokio = { version = "1", features = ["sync"] }
hmac = "0.12"
sha2 = "0.10"
subtle = "2"
hex = "0.4"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
url = "2"
tracing = "0.1"
percent-encoding = "2"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
serde_test = "1"

[features]
default = ["rustls-tls"]
rustls-tls = []
native-tls = ["reqwest/native-tls"]
stream = []
