[package]
name = "gitea-sdk"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Rust SDK for the Gitea API"
license = "MIT"
repository = "https://github.com/infinitete/gitea-sdk"
readme = "README.md"
keywords = ["gitea", "api", "sdk", "git", "forgejo"]
categories = ["api-bindings", "web-programming"]
exclude = [".githooks", "tests", "examples", ".worktrees", ".env*", ".sisyphus"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
base64 = "0.22"
strum = { version = "0.27", features = ["derive"] }
thiserror = "2"
semver = { version = "1", features = ["serde"] }
ssh-key = { version = "0.6", features = ["ed25519", "encryption", "rsa", "std", "rand_core"] }
signature = "2"
ssh-agent-client-rs = "0.9"
parking_lot = "0.12"
tokio = { version = "1", features = ["sync"] }
hmac = "0.12"
sha2 = "0.10"
subtle = "2"
hex = "0.4"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
url = "2"
tracing = "0.1"
percent-encoding = "2"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
serde_test = "1"

[features]
default = ["rustls-tls"]
rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]
stream = ["reqwest/stream"]
